tests/ui/kindck/kindck-nonsendable-1.stderr
error[E0277]: `Rc<usize>` cannot be sent between threads safely
  --> $DIR/kindck-nonsendable-1.rs:9:9
   |
LL |     bar(move|| foo(x));
   |     --- ------^^^^^^^
   |     |   |
   |     |   `Rc<usize>` cannot be sent between threads safely
   |     |   within this `{closure@$DIR/kindck-nonsendable-1.rs:9:9: 9:15}`
   |     required by a bound introduced by this call
   |
   = help: within `{closure@$DIR/kindck-nonsendable-1.rs:9:9: 9:15}`, the trait `Send` is not implemented for `Rc<usize>`
note: required because it's used within this closure
  --> $DIR/kindck-nonsendable-1.rs:9:9
   |
LL |     bar(move|| foo(x));
   |         ^^^^^^
note: required by a bound in `bar`
  --> $DIR/kindck-nonsendable-1.rs:5:21
   |
LL | fn bar<F:FnOnce() + Send>(_: F) { }
   |                     ^^^^ required by this bound in `bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
